--- a/index.html
+++ b/index.html
@@ -68,5 +68,43 @@
         ></video>
       </div>
     </section>
+    <section id="about">
+      <div class="container">
+        <div class="about__left">
+          <h2 class="about__h2">About Festava 2022</h2>
+          <p class="about__para">
+            Festava Live is free CSS template provided by TemplateMo website.
+            This layout is built on Bootstrap v5.2.2 CSS library. You are free
+            to use this template for your commercial website.
+          </p>
+          <h3 class="about__h3">Once in Lifetime Experience</h3>
+          <p class="about__para">
+            You are not allowed to redistribute the template ZIP file on any
+            other website without a permission.
+          </p>
+          <h3 class="about__h3">Whole Night Party</h3>
+          <p class="about__para">
+            Please tell your friends about our website.Thank you.
+          </p>
+        </div>
+        <div class="about__right">
+          <img class="about__right--img" src="/assets/about.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <section id="artist">
+      <div class="container">
+        <h2>Meet Artists</h2>
+        <div class="artist__wrapper">
+          <div class="artist__left">
+            <img src="assets/artist 1.jpg" alt="">
+          </div>
+          <div class="artist__right">
+            <img src="assets/artist 2.jpg" alt="">
+            <img src="assets/artist 3.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
