started with artists section

--- a/index.html
+++ b/index.html
@@ -93,15 +93,28 @@
       </div>
     </section>
     <section id="artist">
-      <div class="container">
-        <h2>Meet Artists</h2>
+      <div class="container artist__container">
+        <h2 class="artist__h2">Meet Artists</h2>
         <div class="artist__wrapper">
           <div class="artist__left">
-            <img src="assets/artist 1.jpg" alt="">
+            <img class="artist__left--img" src="assets/artist 1.jpg" alt="" />
+            <div class="artist__hover">
+              <div class="artist__hover--description">
+                <p class="artist__hover--info">Name: Madonna</p>
+                <p class="artist__hover--info">Birthdate: August 16, 1958</p>
+                <p class="artist__hover--info">Music: Pop,R&B</p>
+                <hr>
+                <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+              </div>
+            </div>
           </div>
           <div class="artist__right">
-            <img src="assets/artist 2.jpg" alt="">
-            <img src="assets/artist 3.jpg" alt="">
+            <img
+              class="artist__right--img artist__right--img1"
+              src="assets/artist 2.jpg"
+              alt=""
+            />
+            <img class="artist__right--img" src="assets/artist 3.jpg" alt="" />
           </div>
         </div>
       </div>
