--- a/index.html
+++ b/index.html
@@ -109,13 +109,37 @@
             </div>
           </div>
           <div class="artist__right">
-            <img
+            <div class="artist__right--top">
+
+              <img
               class="artist__right--img artist__right--img1"
               src="assets/artist 2.jpg"
               alt=""
-            />
-            <img class="artist__right--img" src="assets/artist 3.jpg" alt="" />
-          </div>
+              />
+              <div class="artist__hover1">
+                <div class="artist__hover--description1">
+                  <p class="artist__hover--info">Name: Madonna</p>
+                  <p class="artist__hover--info">Birthdate: August 16, 1958</p>
+                  <p class="artist__hover--info">Music: Pop,R&B</p>
+                  <hr>
+                  <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="artist__right--bottom">
+
+              <img class="artist__right--img" src="assets/artist 3.jpg" alt="" />
+              <div class="artist__hover2">
+                <div class="artist__hover--description1">
+                  <p class="artist__hover--info">Name: Madonna</p>
+                  <p class="artist__hover--info">Birthdate: August 16, 1958</p>
+                  <p class="artist__hover--info">Music: Pop,R&B</p>
+                  <hr>
+                  <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+                </div>
+              </div>
+            </div>
+            </div>
         </div>
       </div>
     </section>
