--- a/index.html
+++ b/index.html
@@ -103,43 +103,113 @@
                 <p class="artist__hover--info">Name: Madonna</p>
                 <p class="artist__hover--info">Birthdate: August 16, 1958</p>
                 <p class="artist__hover--info">Music: Pop,R&B</p>
-                <hr>
-                <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+                <hr />
+                <p class="artist__hover--youtube">
+                  Youtube Channel: <a href="">Madonna Official</a>
+                </p>
               </div>
             </div>
           </div>
           <div class="artist__right">
             <div class="artist__right--top">
-
               <img
-              class="artist__right--img artist__right--img1"
-              src="assets/artist 2.jpg"
-              alt=""
+                class="artist__right--img artist__right--img1"
+                src="assets/artist 2.jpg"
+                alt=""
               />
               <div class="artist__hover1">
                 <div class="artist__hover--description1">
                   <p class="artist__hover--info">Name: Madonna</p>
                   <p class="artist__hover--info">Birthdate: August 16, 1958</p>
                   <p class="artist__hover--info">Music: Pop,R&B</p>
-                  <hr>
-                  <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+                  <hr />
+                  <p class="artist__hover--youtube">
+                    Youtube Channel: <a href="">Madonna Official</a>
+                  </p>
                 </div>
               </div>
             </div>
             <div class="artist__right--bottom">
-
-              <img class="artist__right--img" src="assets/artist 3.jpg" alt="" />
+              <img
+                class="artist__right--img"
+                src="assets/artist 3.jpg"
+                alt=""
+              />
               <div class="artist__hover2">
                 <div class="artist__hover--description1">
                   <p class="artist__hover--info">Name: Madonna</p>
                   <p class="artist__hover--info">Birthdate: August 16, 1958</p>
                   <p class="artist__hover--info">Music: Pop,R&B</p>
-                  <hr>
-                  <p class="artist__hover--youtube">Youtube Channel: <a href="">Madonna Official</a></p>
+                  <hr />
+                  <p class="artist__hover--youtube">
+                    Youtube Channel: <a href="">Madonna Official</a>
+                  </p>
                 </div>
               </div>
             </div>
-            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="schedule">
+      <div class="container">
+        <div class="schedule__wrapper">
+          <h2>Event Schedule</h2>
+          <div class="schedule__table">
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">Date</th>
+                  <th scope="col">Wednsesday</th>
+                  <th scope="col">Thursday</th>
+                  <th scope="col">Friday</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Day 1</th>
+                  <td>
+                    <h4>Pop Night</h4>
+                    <p>5:00 - 7:00 PM</p>
+                    <p>By Adele</p>
+                    <div class="section__overlay"></div>
+                  </td>
+                  <td class="backround__color"></td>
+                  <td>
+                    <h4>Rock & Roll</h4>
+                    <p>7:00 - 11:00 PM</p>
+                    <p>By Rihana</p>
+                    <div class="section__overlay"></div>
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">Day 2</th>
+                  <td class="backound__color"></td>
+                  <td>
+                    <h4>DJ Night</h4>
+                    <p>6:30 - 9:30 PM</p>
+                    <p>By Rihanna</p>
+                  </td>
+                  <td class="backround__color"></td>
+                </tr>
+                <tr>
+                  <th scope="row">Day 3</th>
+                  <td>
+                    <h4>Country Music</h4>
+                    <p> 4:30 - 7:30 PM</p>
+                    <p>By Rihana</p>
+                    <div class="section__overlay"></div>
+                  </td>
+                  <td class="backround__color"></td>
+                  <td>
+                    <h4>Free Styles</h4>
+                    <p>6:00 - 10:00 PM</p>
+                    <p>By Members</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </section>
