finished schedule section

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
       </div>
     </section>
     <section id="schedule">
-      <div class="container">
+      <div class="schedule__container">
         <div class="schedule__wrapper">
-          <h2>Event Schedule</h2>
+          <h2 class="schedule__h2">Event Schedule</h2>
           <div class="schedule__table">
-            <table>
+            <table class="table">
               <thead>
                 <tr>
                   <th scope="col">Date</th>
@@ -167,15 +167,15 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">Day 1</th>
-                  <td>
+                  <th class="th__row" scope="row">Day 1</th>
+                  <td class="backround__img">
                     <h4>Pop Night</h4>
                     <p>5:00 - 7:00 PM</p>
                     <p>By Adele</p>
                     <div class="section__overlay"></div>
                   </td>
-                  <td class="backround__color"></td>
-                  <td>
+                  <td  class="backround__color"></td>
+                  <td class="backround__img1">
                     <h4>Rock & Roll</h4>
                     <p>7:00 - 11:00 PM</p>
                     <p>By Rihana</p>
@@ -183,9 +183,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <th scope="row">Day 2</th>
-                  <td class="backound__color"></td>
-                  <td>
+                  <th class="th__row" scope="row">Day 2</th>
+                  <td class="backround__color"></td>
+                  <td class="gray dj">
                     <h4>DJ Night</h4>
                     <p>6:30 - 9:30 PM</p>
                     <p>By Rihanna</p>
@@ -193,15 +193,15 @@
                   <td class="backround__color"></td>
                 </tr>
                 <tr>
-                  <th scope="row">Day 3</th>
-                  <td>
+                  <th class="th__row" scope="row">Day 3</th>
+                  <td class="backround__img2">
                     <h4>Country Music</h4>
-                    <p> 4:30 - 7:30 PM</p>
+                    <p>4:30 - 7:30 PM</p>
                     <p>By Rihana</p>
                     <div class="section__overlay"></div>
                   </td>
                   <td class="backround__color"></td>
-                  <td>
+                  <td class="gray">
                     <h4>Free Styles</h4>
                     <p>6:00 - 10:00 PM</p>
                     <p>By Members</p>
