added plans section html

--- a/index.html
+++ b/index.html
@@ -213,5 +213,35 @@
         </div>
       </div>
     </section>
+    <section id="price">
+      <div class="container">
+        <h2>Plans, you' love</h2>
+        <div class="plans">
+          <div class="plan__left">
+            <span class="plan__span">Early Bird $120</span>
+            <p>Including good things:</p>
+            <ul class="plan__lists">
+              <li class="plan__list">Platform for potential customers</li>
+              <li class="plan__list"> Digital experience</li>
+              <li class="plan__list">High-quality sound</li>
+              <li class="plan__list"> Standard content</li>
+            </ul>
+            <a class="plan__ticket" href="">Buy ticket</a>
+          </div>
+          <div class="plan__right">
+            <span class="plan__span">Standard $240 </span>
+            <p>What makes a premium festava?</p>
+            <ul class="plan__lists">
+              <li class="plan__list">Platform for potential customers</li>
+              <li class="plan__list">Digital experience</li>
+              <li class="plan__list">High-quality sound</li>
+              <li class="plan__list">Premium content</li>
+              <li class="plan__list">Live chat support</li>
+            </ul>
+            <a class="plan__ticket" href="">Buy Ticket</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
