added plans css

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p>By Adele</p>
                     <div class="section__overlay"></div>
                   </td>
-                  <td  class="backround__color"></td>
+                  <td class="backround__color"></td>
                   <td class="backround__img1">
                     <h4>Rock & Roll</h4>
                     <p>7:00 - 11:00 PM</p>
@@ -213,32 +213,48 @@
         </div>
       </div>
     </section>
-    <section id="price">
+    <section id="plans">
       <div class="container">
-        <h2>Plans, you' love</h2>
-        <div class="plans">
-          <div class="plan__left">
-            <span class="plan__span">Early Bird $120</span>
-            <p>Including good things:</p>
-            <ul class="plan__lists">
-              <li class="plan__list">Platform for potential customers</li>
-              <li class="plan__list"> Digital experience</li>
-              <li class="plan__list">High-quality sound</li>
-              <li class="plan__list"> Standard content</li>
-            </ul>
-            <a class="plan__ticket" href="">Buy ticket</a>
-          </div>
-          <div class="plan__right">
-            <span class="plan__span">Standard $240 </span>
-            <p>What makes a premium festava?</p>
-            <ul class="plan__lists">
-              <li class="plan__list">Platform for potential customers</li>
-              <li class="plan__list">Digital experience</li>
-              <li class="plan__list">High-quality sound</li>
-              <li class="plan__list">Premium content</li>
-              <li class="plan__list">Live chat support</li>
-            </ul>
-            <a class="plan__ticket" href="">Buy Ticket</a>
+        <div class="plans__wrapper">
+          <h2>Plans, you' love</h2>
+          <div class="plans">
+            <div class="plan__left">
+              <div class="plan__price--wrapper">
+                <p class="plan__price">
+                  <small class="plan__small">Early Bird</small>$120
+                </p>
+              </div>
+
+              <p class="plan__para">Including good things:</p>
+              <ul class="plan__lists">
+                <li class="plan__list">Platform for potential customers</li>
+                <li class="plan__list">Digital experience</li>
+                <li class="plan__list">High-quality sound</li>
+                <li class="plan__list">Standard content</li>
+              </ul>
+              <div class="plan__ticket--wrapper">
+                <a class="plan__ticket" href="">Buy ticket</a>
+              </div>
+            </div>
+            <div class="plan__right">
+              <div class="plan__price--wrapper">
+                <p class="plan__price">
+                  <small class="plan__small">Early Bird</small>$120
+                </p>
+              </div>
+
+              <p class="plan__para">Including good things:</p>
+              <ul class="plan__lists">
+                <li class="plan__list">Platform for potential customers</li>
+                <li class="plan__list">Digital experience</li>
+                <li class="plan__list">High-quality sound</li>
+                <li class="plan__list">Standard content</li>
+                <li class="plan__list">Standard content</li>
+              </ul>
+              <div class="plan__ticket--wrapper">
+                <a class="plan__ticket" href="">Buy ticket</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
