added 50% off absolute

--- a/index.html
+++ b/index.html
@@ -233,7 +233,13 @@
                 <li class="plan__list">Standard content</li>
               </ul>
               <div class="plan__ticket--wrapper">
-                <a class="plan__ticket" href="">Buy ticket</a>
+                <a class="plan__ticket" href="">Buy ticket
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </div>
+              <div class="plan__absolute">
+                <p class="plan__absolute--para">Save up to </p>
+                <span class="plan__absolute--span">50%</span>
               </div>
             </div>
             <div class="plan__right">
@@ -252,7 +258,9 @@
                 <li class="plan__list">Standard content</li>
               </ul>
               <div class="plan__ticket--wrapper">
-                <a class="plan__ticket" href="">Buy ticket</a>
+                <a class="plan__ticket" href="">Buy ticket
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
               </div>
             </div>
           </div>
