added contact section html

--- a/index.html
+++ b/index.html
@@ -267,5 +267,32 @@
         </div>
       </div>
     </section>
+    <section id="contact">
+      <div class="container">
+        <div class="contact__wrapper">
+          <h2>Interested? Lets' talk</h2>
+          <nav class="contact__nav">
+            <button class="contact__btn">Contact Form</button>
+          </nav>
+          <div class="contact__form">
+            <div class="contact__form--name">
+              <input type="text" placeholder="Full Name">
+            </div>
+            <div class="contact__form--email">
+              <input type="email" placeholder="Email address">
+            </div>
+            <div class="contact__form--company">
+              <input type="text" placeholder="Company">
+            </div>
+            <div class="contact__form--message">
+              <textarea name="" id="" cols="30" rows="3"></textarea>
+            </div>
+            <div class="contact__form--btn">
+              <button class="contact__btn" type="submit">Send Message</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
