--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       </div>
     </section>
     <section id="contact">
-      <div class="container">
+      <div class="contact__container">
         <div class="contact__wrapper">
           <div class="contact__h2">
             <h2>Interested? Lets' talk</h2>
@@ -322,4 +322,20 @@
       </div>
     </section>
   </body>
+  <footer>
+    <div class="footer__top">
+      <div class="footer__top--wrapper">
+        <div class="footer__top--h2"><h2> Festava Live</h2></div>
+        <div class="footer__top--media">
+          <ul class="footer__top--links">
+            <li class="footer__top--link"><a href=""> <i  class="fa-brands fa-twitter footer__img"></i></a></li>
+            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-apple footer__img"></i></a></li>
+            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-instagram footer__img"></i></a></li>
+            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-youtube footer__img"></i></a></li>
+            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-pinterest footer__img"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
