added rest of footer

--- a/index.html
+++ b/index.html
@@ -325,17 +325,67 @@
   <footer>
     <div class="footer__top">
       <div class="footer__top--wrapper">
-        <div class="footer__top--h2"><h2> Festava Live</h2></div>
+        <div class="footer__top--h2"><h2>Festava Live</h2></div>
         <div class="footer__top--media">
           <ul class="footer__top--links">
-            <li class="footer__top--link"><a href=""> <i  class="fa-brands fa-twitter footer__img"></i></a></li>
-            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-apple footer__img"></i></a></li>
-            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-instagram footer__img"></i></a></li>
-            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-youtube footer__img"></i></a></li>
-            <li class="footer__top--link"><a href=""> <i class="fa-brands fa-pinterest footer__img"></i></a></li>
+            <li class="footer__top--link">
+              <a href=""> <i class="fa-brands fa-twitter footer__img"></i></a>
+            </li>
+            <li class="footer__top--link">
+              <a href=""> <i class="fa-brands fa-apple footer__img"></i></a>
+            </li>
+            <li class="footer__top--link">
+              <a href=""> <i class="fa-brands fa-instagram footer__img"></i></a>
+            </li>
+            <li class="footer__top--link">
+              <a href=""> <i class="fa-brands fa-youtube footer__img"></i></a>
+            </li>
+            <li class="footer__top--link">
+              <a href=""> <i class="fa-brands fa-pinterest footer__img"></i></a>
+            </li>
           </ul>
         </div>
       </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__bottom--wrapper">
+        <div class="footer__links--wrapper">
+          <h5 class="footer__bottom--h5">Links</h5>
+          <ul class="footer__bottom--links">
+            <li class="footer__bottom--link"><a href="">Home</a></li>
+            <li class="footer__bottom--link"><a href="">About</a></li>
+            <li class="footer__bottom--link"><a href="">Artists</a></li>
+            <li class="footer__bottom--link"><a href="">Schedule</a></li>
+            <li class="footer__bottom--link"><a href="">Pricing</a></li>
+            <li class="footer__bottom--link"><a href="">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__bottom--contact">
+          <h5 class="footer__bottom--h5">Have any questions?</h5>
+          <a class="footer__bottom--number" href="tel: 090-080-0760"
+            >090-080-0760</a
+          >
+          <a class="footer__bottom--email" href="mailto: hello@company.com"
+            >hello@company.com</a
+          >
+        </div>
+        <div class="footer__bottom--location">
+          <h5 class="footer__bottom--h5">Location</h5>
+          <p class="footer__bottom--para">
+            Silang Junction South, <br />
+            Tagaytay, Cavite, Philippines
+          </p>
+        </div>
+      </div>
+    </div>
+    <hr class="hr">
+    <div class="footer__copyright">
+      <p class="copyright__para">Copyright © 2036 Festava Live Company</p>
+      <ul class="copyright__links">
+        <li class="copyright__link"><a href="">Terms & Conditions</a></li>
+        <li class="copyright__link"><a href="">Privact Policy</a></li>
+        <li class="copyright__link"><a href="">Your Feedback</a></li>
+      </ul>
     </div>
   </footer>
 </html>
