added hover effects

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="nav__container">
           <a class="nav__brand" href="#landing">Festava Live</a>
           <ul class="nav__links">
-            <li class="nav__link"><a href="">Home</a></li>
-            <li class="nav__link"><a href="">About</a></li>
-            <li class="nav__link"><a href="">Artists</a></li>
-            <li class="nav__link"><a href="">Schedule</a></li>
-            <li class="nav__link"><a href="">Pricing</a></li>
-            <li class="nav__link"><a href="">Contact</a></li>
+            <li><a class="nav__link" href="">Home</a></li>
+            <li><a class="nav__link" href="">About</a></li>
+            <li><a class="nav__link" href="">Artists</a></li>
+            <li><a class="nav__link" href="">Schedule</a></li>
+            <li><a class="nav__link" href="">Pricing</a></li>
+            <li><a class="nav__link" href="">Contact</a></li>
           </ul>
           <a class="nav__link--primary" href="">Buy Ticket</a>
         </div>
@@ -43,11 +43,11 @@
 
         <div class="hero__bottom">
           <div class="hero__bottom--date">
-            <i class="fa-regular fa-clock"></i>
+            <i class="fa-regular fa-clock hero__img"></i>
             <h5>10-12th,Dec 2023</h5>
           </div>
           <div class="hero__bottom--place">
-            <i class="fa-solid fa-location-dot"></i>
+            <i class="fa-solid fa-location-dot hero__img"></i>
             <h5>National Center,United States</h5>
           </div>
           <div class="hero__bottom--social">
@@ -69,7 +69,7 @@
       </div>
     </section>
     <section id="about">
-      <div class="container">
+      <div class="container about__container">
         <div class="about__left">
           <h2 class="about__h2">About Festava 2022</h2>
           <p class="about__para">
@@ -352,12 +352,12 @@
         <div class="footer__links--wrapper">
           <h5 class="footer__bottom--h5">Links</h5>
           <ul class="footer__bottom--links">
-            <li class="footer__bottom--link"><a href="">Home</a></li>
-            <li class="footer__bottom--link"><a href="">About</a></li>
-            <li class="footer__bottom--link"><a href="">Artists</a></li>
-            <li class="footer__bottom--link"><a href="">Schedule</a></li>
-            <li class="footer__bottom--link"><a href="">Pricing</a></li>
-            <li class="footer__bottom--link"><a href="">Contact</a></li>
+            <li class="footer__bottom--link"><a href=""></a>Home</li>
+            <li class="footer__bottom--link"><a href=""></a>About</li>
+            <li class="footer__bottom--link"><a href=""></a>Artists</li>
+            <li class="footer__bottom--link"><a href=""></a>Schedule</li>
+            <li class="footer__bottom--link"><a href=""></a>Pricing</li>
+            <li class="footer__bottom--link"><a href=""></a>Contact</li>
           </ul>
         </div>
         <div class="footer__bottom--contact">
@@ -382,9 +382,9 @@
     <div class="footer__copyright">
       <p class="copyright__para">Copyright © 2036 Festava Live Company</p>
       <ul class="copyright__links">
-        <li class="copyright__link"><a href="">Terms & Conditions</a></li>
-        <li class="copyright__link"><a href="">Privact Policy</a></li>
-        <li class="copyright__link"><a href="">Your Feedback</a></li>
+        <li class="copyright__link"><a class="copyright__link" href="">Terms & Conditions</a></li>
+        <li class="copyright__link"><a class="copyright__link" href="">Privact Policy</a></li>
+        <li class="copyright__link"><a class="copyright__link" href="">Your Feedback</a></li>
       </ul>
     </div>
   </footer>
