made nav sticky

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/7a2e4501c4.js"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js" defer></script>
   </head>
   <body>
     <header>
@@ -275,9 +276,9 @@
           <div class="contact__h2">
             <h2>Interested? Lets' talk</h2>
           </div>
-          <nav class="contact__nav">
+          <div class="contact__nav">
             <button class="contact__nav--btn">Contact Form</button>
-          </nav>
+          </div>
           <div class="contact__form">
             <form action="#" class="contact__form--form">
               <div class="contact__form--wrapper">
@@ -378,13 +379,19 @@
         </div>
       </div>
     </div>
-    <hr class="hr">
+    <hr class="hr" />
     <div class="footer__copyright">
       <p class="copyright__para">Copyright © 2036 Festava Live Company</p>
       <ul class="copyright__links">
-        <li class="copyright__link"><a class="copyright__link" href="">Terms & Conditions</a></li>
-        <li class="copyright__link"><a class="copyright__link" href="">Privact Policy</a></li>
-        <li class="copyright__link"><a class="copyright__link" href="">Your Feedback</a></li>
+        <li class="copyright__link">
+          <a class="copyright__link" href="">Terms & Conditions</a>
+        </li>
+        <li class="copyright__link">
+          <a class="copyright__link" href="">Privact Policy</a>
+        </li>
+        <li class="copyright__link">
+          <a class="copyright__link" href="">Your Feedback</a>
+        </li>
       </ul>
     </div>
   </footer>
