added dropdown menu and fixed sum bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <div class="header__container">
           <i class="fa-regular fa-user header__img"></i>
-  
+
           <p class="header__para">Welcome to music Festival 2023</p>
         </div>
       </header>
@@ -26,13 +26,17 @@
           <a class="nav__brand" href="#landing">Festava Live</a>
           <ul class="nav__links">
             <li><a class="nav__link" href="">Home</a></li>
-            <li><a class="nav__link" href="">About</a></li>
+            <li><a class="nav__link" href="#about">About</a></li>
             <li><a class="nav__link" href="">Artists</a></li>
             <li><a class="nav__link" href="">Schedule</a></li>
             <li><a class="nav__link" href="">Pricing</a></li>
             <li><a class="nav__link" href="">Contact</a></li>
           </ul>
+
           <a class="nav__link--primary" href="">Buy Ticket</a>
+          <a href="#" class="nav__link nav__link--menu">
+            <i class="fas fa-bars"></i>
+          </a>
         </div>
       </nav>
       <div class="hero">
