--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div class="nav__container">
           <a class="nav__brand" href="#landing">Festava Live</a>
           <ul class="nav__links">
-            <li><a class="nav__link" href="">Home</a></li>
+            <li><a class="nav__link" href="#landing">Home</a></li>
             <li><a class="nav__link" href="#about">About</a></li>
-            <li><a class="nav__link" href="">Artists</a></li>
-            <li><a class="nav__link" href="">Schedule</a></li>
-            <li><a class="nav__link" href="">Pricing</a></li>
-            <li><a class="nav__link" href="">Contact</a></li>
+            <li><a class="nav__link" href="#artist">Artists</a></li>
+            <li><a class="nav__link" href="#schedule">Schedule</a></li>
+            <li><a class="nav__link" href="#plans">Pricing</a></li>
+            <li><a class="nav__link" href="#contact">Contact</a></li>
           </ul>
 
           <a class="nav__link--primary" href="">Buy Ticket</a>
@@ -57,9 +57,15 @@
           </div>
           <div class="hero__bottom--social">
             <span class="hero__bottom--span">Share:</span>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.facebook.com/" target="_blank">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank">
+              <i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -334,19 +340,19 @@
         <div class="footer__top--media">
           <ul class="footer__top--links">
             <li class="footer__top--link">
-              <a href=""> <i class="fa-brands fa-twitter footer__img"></i></a>
+              <a href="#"> <i class="fa-brands fa-twitter footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href=""> <i class="fa-brands fa-apple footer__img"></i></a>
+              <a href="#"> <i class="fa-brands fa-apple footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href=""> <i class="fa-brands fa-instagram footer__img"></i></a>
+              <a href="#"> <i class="fa-brands fa-instagram footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href=""> <i class="fa-brands fa-youtube footer__img"></i></a>
+              <a href="#"> <i class="fa-brands fa-youtube footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href=""> <i class="fa-brands fa-pinterest footer__img"></i></a>
+              <a href="#"> <i class="fa-brands fa-pinterest footer__img"></i></a>
             </li>
           </ul>
         </div>
@@ -357,12 +363,14 @@
         <div class="footer__links--wrapper">
           <h5 class="footer__bottom--h5">Links</h5>
           <ul class="footer__bottom--links">
-            <li class="footer__bottom--link"><a href=""></a>Home</li>
-            <li class="footer__bottom--link"><a href=""></a>About</li>
-            <li class="footer__bottom--link"><a href=""></a>Artists</li>
-            <li class="footer__bottom--link"><a href=""></a>Schedule</li>
-            <li class="footer__bottom--link"><a href=""></a>Pricing</li>
-            <li class="footer__bottom--link"><a href=""></a>Contact</li>
+            <li><a class="footer__bottom--link" href="#landing">Home</a></li>
+            <li><a class="footer__bottom--link" href="#about">About</a></li>
+            <li><a class="footer__bottom--link" href="#artist">Artists</a></li>
+            <li>
+              <a class="footer__bottom--link" href="#schedule">Schedule</a>
+            </li>
+            <li><a class="footer__bottom--link" href="#plans">Pricing</a></li>
+            <li><a class="footer__bottom--link" href="#contact">Contact</a></li>
           </ul>
         </div>
         <div class="footer__bottom--contact">
