started adding the google maps function

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
           </div>
           <div class="contact__nav">
             <button class="contact__nav--btn">Contact Form</button>
+            <button class="contact__nav--btn contact__nav--google">Google Maps</button>
           </div>
           <div class="contact__form">
             <form action="#" class="contact__form--form">
@@ -329,6 +330,9 @@
               </div>
             </form>
           </div>
+          <div class="google__maps">
+            hello
+          </div>
         </div>
       </div>
     </section>
@@ -346,13 +350,17 @@
               <a href="#"> <i class="fa-brands fa-apple footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href="#"> <i class="fa-brands fa-instagram footer__img"></i></a>
+              <a href="#">
+                <i class="fa-brands fa-instagram footer__img"></i
+              ></a>
             </li>
             <li class="footer__top--link">
               <a href="#"> <i class="fa-brands fa-youtube footer__img"></i></a>
             </li>
             <li class="footer__top--link">
-              <a href="#"> <i class="fa-brands fa-pinterest footer__img"></i></a>
+              <a href="#">
+                <i class="fa-brands fa-pinterest footer__img"></i
+              ></a>
             </li>
           </ul>
         </div>
