added bubble text onto about img

--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
         </div>
         <div class="about__right">
           <img class="about__right--img" src="/assets/about.jpg" alt="" />
+          <div class="about__img--bubble">
+            <figure class="about__img--user">
+              <i class="fa-regular fa-user"></i>
+            </figure>
+            <div class="about__img--text">
+              <h3 class="about__img--header">a happy moment</h3>
+              <p class="about__img--para">
+                your amazing festival experience with us
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -287,7 +298,9 @@
             <h2>Interested? Lets' talk</h2>
           </div>
           <div class="contact__nav">
-            <button class="contact__nav--btn contact__nav--contact">Contact Form</button>
+            <button class="contact__nav--btn contact__nav--contact">
+              Contact Form
+            </button>
             <button class="contact__nav--btn contact__nav--google">
               Google Maps
             </button>
@@ -330,7 +343,6 @@
               <div class="contact__form--btn">
                 <button class="contact__btn" type="submit">Send Message</button>
               </div>
-
             </form>
             <iframe
               class="google__maps--map"
