--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       </header>
       <nav>
         <div class="nav__container">
-          <a class="nav__brand" href="#landing">Festava Live</a>
+          <a class="nav__brand" href="#">Festava Live</a>
           <ul class="nav__links">
-            <li><a class="nav__link" href="#landing">Home</a></li>
-            <li><a class="nav__link" href="#about">About</a></li>
-            <li><a class="nav__link" href="#artist">Artists</a></li>
-            <li><a class="nav__link" href="#schedule">Schedule</a></li>
-            <li><a class="nav__link" href="#plans">Pricing</a></li>
-            <li><a class="nav__link" href="#contact">Contact</a></li>
+            <li><a class="nav__link " href="#landing">Home</a></li>
+            <li><a class="nav__link " href="#about">About</a></li>
+            <li><a class="nav__link " href="#artist">Artists</a></li>
+            <li><a class="nav__link " href="#schedule">Schedule</a></li>
+            <li><a class="nav__link " href="#plans">Pricing</a></li>
+            <li><a class="nav__link " href="#contact">Contact</a></li>
           </ul>
 
           <a class="nav__link--primary" href="">Buy Ticket</a>
