--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <div class="nav__container">
           <a class="nav__brand" href="#">Festava Live</a>
           <ul class="nav__links">
-            <li><a class="nav__link " href="#landing">Home</a></li>
-            <li><a class="nav__link " href="#about">About</a></li>
-            <li><a class="nav__link " href="#artist">Artists</a></li>
-            <li><a class="nav__link " href="#schedule">Schedule</a></li>
-            <li><a class="nav__link " href="#plans">Pricing</a></li>
-            <li><a class="nav__link " href="#contact">Contact</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#landing">Home</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#about">About</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#artist">Artists</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#schedule">Schedule</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#plans">Pricing</a></li>
+            <li><a class="nav__link " onclick="closeMenu()" href="#contact">Contact</a></li>
           </ul>
 
           <a class="nav__link--primary" href="">Buy Ticket</a>
-          <a href="#" class="nav__link nav__link--menu">
+          <a href="#" class="nav__link nav__link--menu" onclick="openMenu()">
             <i class="fas fa-bars"></i>
           </a>
         </div>
