added . to /assets/about

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </p>
         </div>
         <div class="about__right">
-          <img class="about__right--img" src="/assets/about.jpg" alt="" />
+          <img class="about__right--img" src="./assets/about.jpg" alt="" />
           <div class="about__img--bubble">
             <figure class="about__img--user">
               <i class="fa-regular fa-user"></i>
